Release v0.12.24 - fix min/max height of pic modal so you can still see the whole thing on smaller (laptop) screen

--- a/frame_art_manager/app/public/css/style.css
+++ b/frame_art_manager/app/public/css/style.css
@@ -1905,7 +1905,7 @@ body {
 #modal-image {
   width: auto;
   max-width: 100%;
-  max-height: 400px;
+  max-height: min(400px, 35vh);
   object-fit: contain;
   background: #000;
 }
